# hufffmt

./: Cargo.toml
src/: instruction.rs  instructions.lalrpop  main.rs  opcode.rs  opcodes.lalrpop  test.huff
